recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: type lightGray is not a member of object java.awt.Color
  setCouleur(couleur:Color.lightGray)
                           ^Tree:2: error: not found: value couleur
  setCouleur(couleur:Color.lightGray)
             ^