recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  setCouleur(couleur:Color.lightGray)
  avance(length)
}